# multiagent-debate

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: multiagent_debate_gsm8k.ipynb
